apps/frontend/envs/local/api-url-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-fe
spec:
  template:
    spec:
      containers:
        - name: ecommerce-fe
